# examplehttp

./: Cargo.toml  README.md  boot.sh
examples/: actix.rs  hyper.rs  main.rs  mio.rs
src/: lib.rs
tools/comparison/: index.js
tools/comparison/akka-http/: build.sbt
tools/comparison/akka-http/src/main/resources/: application.conf
tools/comparison/akka-http/src/main/scala/: Main.scala
tools/gatling/: README.md  build.sbt
tools/gatling/src/test/resources/: application.conf  gatling.conf  logback-test.xml
tools/gatling/src/test/scala/examplehttp/: Bench.scala
