[package]
name = "examplehttp"
version = "0.1.0"
authors = ["sxend <arimitsu.k+github@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.1.14"
tokio = "0.1.14"
tokio-io = "0.1.11"
tokio-core = "0.1.17"
tokio-codec = "0.1.1"
tokio-net = "0.0.0"
httparse = "1.3.3"
futures = "0.1.25"
serde = "1.0.85"
serde_json = "1.0.36"
serde_derive = "1.0.85"
tokio-threadpool = "0.1.10"
tokio-executor = "0.1.6"
log = "0.4.6"
tokio-tls = "0.2.1"
tokio-timer = "0.2.10"
timer = "0.2.0"
chrono = "0.4.6"

[dev-dependencies]
clap = "2.32.0"
env_logger = "0.6.0"
actix = "0.8.3"
actix-web = "1.0.3"
hyper = "0.12.23"
mio = { git = "https://github.com/tokio-rs/mio", branch = "master" }
